--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -20,121 +20,97 @@ $red: #FF0000;
   }
   
 } 
-html {
-    scroll-behavior: smooth;
-  }
-
 body {
-    overflow-x: hidden;
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-  }
-  .viewport {
-    overflow: hidden;
-    position: fixed;
-    height: 100%;
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.content {
+  width: 60%; 
+  padding-top:50px;
+}
+
+.img-container {
+  margin: 0 0 50px;
+  
+  img {
+    max-width: 100%;
     width: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    height: auto;
   }
-  
-  .scroll-container {  
-    position: absolute;  
-    overflow: hidden;
-    z-index: 10;
-    display: flex;
-    justify-content: center;  
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-  }
-  
-  .content {
-    width: 60%; 
-    padding-top:50px;
-  }
-  
-  .img-container {
-    margin: 0 0 50px;
-    
-    img {
-      max-width: 100%;
-      width: 100%;
-      height: auto;
-    }
-  }
+}
 .logo{
-
-    position: fixed;
-    top: 2%;
-    left: 2%;
-    z-index: 9000;
-
-    img{
-
-        width: 200px;
-    }
+  
+  position: fixed;
+  top: 2%;
+  left: 2%;
+  z-index: 9000;
+  
+  img{
+    
+    width: 200px;
+  }
 }
 nav{
-
-    position: fixed;
-    top: 10%;
-    right: -8px;
-    transform: rotate(90deg);
-    z-index: 9000;
-
-    a{
-
-        text-decoration: none;
-        transform-origin: center;
-        margin-right: 20px;
-
-        font-family: $title;
-        color: #000;
-
-        &:focus, &:hover{
-
-            text-decoration: none;
-
-            color: #000;
-        }
+  
+  position: fixed;
+  top: 10%;
+  right: -8px;
+  transform: rotate(90deg);
+  z-index: 9000;
+  
+  a{
+    
+    text-decoration: none;
+    transform-origin: center;
+    margin-right: 20px;
+    
+    font-family: $title;
+    color: #000;
+    
+    &:focus, &:hover{
+      
+      text-decoration: none;
+      
+      color: #000;
     }
+  }
 }
 .social{
-    position: fixed;
-    bottom: 2%;
-    right: 2%;
-    z-index: 9000;
-
-    ul{
-
-        li{
-
-            list-style: none;
-            margin-top: 12px;
-
-            &:first-child{
-
-                margin-top: 0;
-            }
-
-            img{
-
-                width: 30px;
-            }
-        }
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
+  z-index: 9000;
+  
+  ul{
+    
+    li{
+      
+      list-style: none;
+      margin-top: 12px;
+      
+      &:first-child{
+        
+        margin-top: 0;
+      }
+      
+      img{
+        
+        width: 30px;
+      }
     }
-
+  }
+  
 }
 
 svg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 99999;
-    pointer-events: none;
-    fill: rgba(255, 0, 0,0.7);
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99999;
+  pointer-events: none;
+  fill: rgba(255, 0, 0,0.7);
+}
