--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -235,10 +235,12 @@
     top:0;
     z-index: 1;
     opacity: 1.2;
-    background: url('~@/assets/img/pol1.jpg') center no-repeat;
+    background: url('~@/assets/img/studio.jpg') center no-repeat;
+    transform: translate(-50%, -50%);
+    transform-origin: center;
     background-size: cover;
     width: 100%;
-    height: 150%;
+    height: 100%;
     object-fit: cover;
     object-position: center;
   }
@@ -251,19 +253,21 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 50vh;
+    background: #FFF;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.6);
     
     h2{
       
       font-family: $title;
-      color: #FFF;
-      font-size: 4rem;
+      color: #000;
+      text-align: center;
     }
     p{
       
       font-family: $text;
-      font-size: 2rem;
-      
-      color: #FFF;
+      text-align: center;
+      color: #000;
     }
   }  
 }
@@ -285,9 +289,12 @@
 .about{
 
   position: relative;
-    height: 100vh;
     width: calc(100% - 200px);
     margin: 100px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
     h1{
 
